feat: update patients rest
